--- a/styles.css
+++ b/styles.css
@@ -221,7 +221,7 @@ font-weight: 700;
 line-height: 100.8px;
 letter-spacing: -5.2px;
 color: #FFFFFF;
-width: 1211px;
+width: 90%;
 text-align: center;
 margin-top: 2rem;
 
@@ -2201,7 +2201,7 @@ height: 100%;
     text-align: center;
     line-height: 75px;
     width: 90%;
-    margin-top: 0rem;
+    margin-top: 3rem;
     
  
 }
