--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,9 @@
     padding: 0;
     box-sizing: border-box;
 }
-
+header{
+    display: none;
+}
 body {
     font-family: Arial, sans-serif;
     background-color: #000;
@@ -5446,12 +5448,12 @@ margin-top: 10px;
             opacity: 1;
         }
         .social-icon {
-            width: 40px;
-            margin-top: 2px;
+            width: 45px;
+           
         }
         .main-icon {
-            width: 40px;
-            margin-top: 2px;
+            width: 45px;
+          
         }
        
     }
